--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,15 +1,16 @@
-<section class="sample-app-content">
-  <h1>Template-driven Form Example :</h1>
+<h1> Template-Based Contact Form Example </h1>
+
+<form #myform="ngForm" (ngSubmit)="onSubmit(myform)">
 
   <p>
     <label>First Name:</label>
-    <input type="text" [(ngModel)]="firstName" required>
+    <input type="text" [(ngModel)]="firstName" name="firstName" required>
   </p>
   <p>
     <label>Last Name:</label>
-    <input type="text"  [(ngModel)]="lastName" required>
+    <input type="text"  [(ngModel)]="lastName" name="lastName"  required>
   </p>
   <p>
-    <button (click)="myFunction()">Submit</button>
-  </p>
-</section>
+
+    <input type = "submit" value = "Submit">
+</form>
