--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,7 @@
 <!-- credits -->
 <div class="text-center mt-4">
     <p>
-        <span >Angular Authentication Example </span>
+        <span >Angular Form Example </span>
     </p>
 
 </div>
