--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -4,11 +4,11 @@
 
   <p>
     <label>First Name:</label>
-    <input type="text" [(ngModel)]="firstName" name="firstName" required>
+    <input type="text" [(ngModel)]="firstName" name="firstName">
   </p>
   <p>
     <label>Last Name:</label>
-    <input type="text"  [(ngModel)]="lastName" name="lastName"  required>
+    <input type="text"  [(ngModel)]="lastName" name="lastName" >
   </p>
   <p>
 
