--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,16 +1,16 @@
-<h4> Template-Based Contact Form Example </h4>
+<h4>Template-driven Form Example </h4>
+<div class="card-body">
+  <form #myform="ngForm" (ngSubmit)="onSubmit(myform)">
 
-<form #myform="ngForm" (ngSubmit)="onSubmit(myform)">
-
-  <p>
-    <label>First Name:</label>
-    <input type="text" [(ngModel)]="firstName" name="firstName">
-  </p>
-  <p>
-    <label>Last Name:</label>
-    <input type="text"  [(ngModel)]="lastName" name="lastName" >
-  </p>
-  <p>
+    <div class="form-group">
+      <label>First Name:</label>
+      <input class="form-control" type="text" [(ngModel)]="firstName" name="firstName">
+    </div>
+    <div class="form-group">
+      <label>Last Name:</label>
+      <input class="form-control" type="text"  [(ngModel)]="lastName" name="lastName" >
+    </div>
 
     <input type = "submit" value = "Submit">
-</form>
+  </form>
+</div>
